# ADA_2026_1_KQ_NODES

./: .gitignore  main.py  pyproject.toml
GeoMIP/src/Method2_Dynamic_Programming_Reformulation/: exec_user.py
GeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/: main.py
GeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/controllers/strategies/: k_geometric.py
KGeoMIP/results/: DatosPruebas2026_1.xlsx
KGeoMIP/src/Method2_Dynamic_Programming_Reformulation/: exec_user.py
KGeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/: main.py
KGeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/.samples/: N10A.npy
KGeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/constants/: base.py
KGeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/controllers/: manager.py
KGeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/controllers/strategies/: KGeoMIP.py
KGeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/models/core/: system.py
KQNodes/: exec_user.py
KQNodes/src/results/: pruebas_con_resultados.xlsx
docs/: Manual_Usuario_KQ (desarrollo).md
src/: main.py
src/results/: gap.txt  pruebas.xlsx  pruebas_con_resultados.xlsx
src/strategies/: force.py  q_nodes.py
src/strategies/kqnodes/: bueno_en_bajo.py  profilter.py  tree_node.py
