[project]
name = "ada-2026-kqnodes"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.0.2",
    "scipy>=1.17.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "pyphi>=1.2.0",
    "pyinstrument>=5.1.2",
    "pyttsx3>=2.99",
    "colorama>=0.4.6",
    "questionary>=2.1.0"
]